# osuniverse

./: .gitignore  README.md  benchmark.py  helper.py  index.html  pyproject.toml  viewer.py
agents/claude_computer_use/: agent.yaml  pyproject.toml
agents/claude_computer_use/claude_computer_use/: agent.py  server.py
agents/claude_computer_use/claude_computer_use/anthropic/: base.py
agents/cua/: agent.yaml  pyproject.toml
agents/cua/cua/: agent.py  server.py
agents/cua/cua/actor/: action_parser.py  base.py  oai.py  utils.py
agents/qwen/: agent.yaml  pyproject.toml
agents/react/: agent.yaml  pyproject.toml
agents/react/react/: agent.py  server.py
agents/react/react/actor/: oai.py
docs/: AGENTS.md  RUNNERS.md
osuniverse/: config.py  utils.py
osuniverse/data/: testcase.py  testcaserun.py
osuniverse/runners/: base.py  surfkit_agent_runner.py
osuniverse/validators/: base.py  cot_gemini_validator.py
testcases/browser/: airbnb_search_1.yaml  airbnb_search_2.yaml  airbnb_search_3.yaml  airbnb_search_4.yaml  battle.yaml  cute_heart_image.yaml  english_king_1.yaml  english_king_2.yaml  english_king_3.yaml  facebook_basic_navigation.yaml  finland_population.yaml  greece_rank_in_gii.yaml  imdb_1.yaml  imdb_2.yaml  imdb_3.yaml  instagram_basic_navigation.yaml  open_google.yaml  open_wikipedia.yaml  sausage_and_peppers_find.yaml  sausage_and_peppers_return.yaml  sausage_and_peppers_return_and_close.yaml  three_body_problem.yaml  word_search_1.yaml  word_search_2.yaml  word_search_3.yaml
testcases/desktop/: about_xfce.yaml  date.yaml  new_background.yaml  open_browser.yaml  open_gimp.yaml  open_libreoffice_calc.yaml  open_libreoffice_impress.yaml  open_libreoffice_writer.yaml  open_terminal.yaml  relocate_icons.yaml
testcases/games/: 16.yaml  256.yaml  4.yaml  64.yaml  dust.yaml  lava.yaml  obsidian.yaml  ocean.yaml  room_1.yaml  room_10.yaml  room_11.yaml  room_12.yaml  room_13.yaml  room_14.yaml  room_15.yaml  room_16.yaml  room_2.yaml  room_3.yaml  room_4.yaml  room_5.yaml  room_6.yaml  room_7.yaml  room_8.yaml  room_9.yaml
testcases/gimp/: mandelbrot_jigsaw.yaml  new_empty_file.yaml  new_empty_file_with_export.yaml  new_image_figures.yaml  new_image_smiley.yaml
testcases/libreoffice_calc/: add_formula.yaml  add_row.yaml  add_sheet.yaml  align_values.yaml  basic_navigation.yaml  change_font_1.yaml  change_font_2.yaml  clean_duplicates_in_csv.yaml  color_table.yaml  create_and_save_new_spreadsheet.yaml  delete_column.yaml  delete_row.yaml  delete_sheet.yaml  diagram_simple.yaml  edit_cell.yaml  grocery_estimates.yaml  hello_world.yaml  read_cells_1.yaml  read_cells_2.yaml  read_cells_3.yaml  read_cells_4.yaml  read_cells_5.yaml  read_cells_6.yaml  read_data_1.yaml  read_data_2.yaml  read_data_3.yaml  rename_sheet.yaml  save_as_csv_1.yaml  save_as_csv_2.yaml  sort_table.yaml  summation.yaml  summation_with_title.yaml
testcases/libreoffice_impress/: create_and_save_new_deck.yaml  edit_diagram_simple.yaml  edit_slide_1.yaml  edit_slide_2.yaml  edit_slide_3.yaml  read_slides_1.yaml  read_slides_2.yaml  read_slides_3.yaml
testcases/libreoffice_writer/: add_column_fill.yaml  add_row_fill.yaml  add_sentence_end.yaml  add_sentence_middle.yaml  add_sentence_start.yaml  color_table.yaml  combine_two_documents.yaml  create_and_save_new_doc.yaml  create_table_2_by_2.yaml  create_table_4_by_3.yaml  delete_column.yaml  (+29 more)
(+20 files in other folders)
