
[tool.poetry]
name = "ClaudeComputerUse"
version = "0.1.0"
description = "Claude Computer Use Agent"
authors = ["Kentauros AI <partnerships@kentauros.ai>"]
license = "MIT"
packages = [{include = "claude_computer_use"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.27"
pydantic = "^2.6.3"
requests = "^2.31.0"
fastapi = {version = "^0.109", extras = ["all"]}
surfkit = "^0.1.382"
anthropic = "^0.47.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
pytest = "^8.0.2"
ipykernel = "^6.29.3"
pytest-env = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
