
[tool.poetry]
name = "react"
version = "0.1.0"
description = "react agent"
authors = ["Kentauros AI <partnerships@kentauros.ai>"]
license = "MIT"
packages = [{include = "react"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.27"
pydantic = "^2.6.3"
requests = "^2.31.0"
fastapi = {version = "^0.109", extras = ["all"]}
json-repair = "^0.30.2"
orign = "^0.1.13"
threadmem = "^0.2.37"
taskara = "^0.1.171"
openai = "^1.59.3"
surfkit = "^0.1.382"
litellm = "^1.63.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
pytest = "^8.0.2"
ipykernel = "^6.29.3"
pytest-env = "^1.1.3"

[tool.pyright]
reportUnknownParameterType = false
reportMissingTypeArgument = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportPrivateUsage = false
reportUntypedFunctionDecorator = false
reportUntypedBaseClass = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
